--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,8 @@ ol, ul {
   background: #fff;
   border: 15px solid #6643C7;
   float: left;
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
-  line-height: 150px;
   height: 150px;
   margin-right: -15px;
   margin-top: -15px;
@@ -50,6 +49,9 @@ ol, ul {
   width: 150px;
   color: orange;
   box-shadow: 6px 11px 0 0 #0b0221;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .square:focus {
@@ -94,3 +96,12 @@ ol, ul {
   width: 218px;
   height: 216px;
 }
+
+.topscores {
+  margin-left: 50px;
+}
+
+.score-list {
+  font-size: 14px;
+}
+
